--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Fabiano Brancher",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "mongoose": "^5.4.10",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "python": "^0.0.4"
   }
 }
